# rust-sample-backend-api

./: Cargo.toml  Dockerfile  docker-compose.yml  rocket.toml
.github/workflows/: docker-publish.yml
src/: main.rs  models.rs  routes.rs
src/user/: mod.rs  model.rs
